[project]
name = "drone-nl-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "streamlit>=1.50.0",
    "ultralytics>=8.3.203",
]
